changed contact form and some code refactoring

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "create-react-app-express",
-  "version": "0.1.0",
+  "name": "about-me",
+  "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
