--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
