--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "googleapis": "^39.2.0",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.6"
